--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -6,30 +6,31 @@
     fxLayoutGap="10px" 
     fxLayoutGap.xs="0">
 
-<div fxFlex="40" *ngIf="dish">
-    <mat-card>
+<div fxFlex="40">
+    <mat-card *ngIf="dish">
       <mat-card-header>
         <mat-card-title>
           <h3>{{ dish.name | uppercase }}</h3>
         </mat-card-title>
       </mat-card-header>
-      <mat-card>
-        <img mat-card-image src = "{{ dish.image }}">
-      </mat-card>
+      <img mat-card-image src={{dish.image}} alt={{dish.name}}>
       <mat-card-content>
         {{ dish.description }}
       </mat-card-content>
+      <mat-card-actions>
+          <button mat-button>LIKE</button>
+          <button mat-button>SHARE</button>
+      </mat-card-actions>
     </mat-card>
 </div>
 
 <div fxFlex="40">
-  <mat-list role="list">
-    <h2 mat-header>COMMENTS</h2>
-    <mat-list-item role="listitem" *ngFor="let comments of dish.comments">
-      <p matLine> {{ comments.rating }} Stars </p>
+  <mat-list *ngIf="dish">
+    <h2 mat-header> Comments </h2>
+    <mat-list-item *ngFor="let comments of dish.comments">
       <p matLine> {{ comments.comment }} </p>
-      <p matLine> {{ comments.author }} </p>
-      <p matLine> {{ comments.date | date }} </p>
+      <p matLine> {{ comments.rating }} Stars </p>
+      <p matLine> -- {{ comments.author }} {{ comments.date | date }} </p>
     </mat-list-item>
   </mat-list>
 </div>
