--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign.gt-md="space-around center" fxLayoutGap="10px">
+<div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column"  fxLayoutGap="10px">
 
   <mat-card *ngIf="dish" fxFlex>
     <mat-card-header>
@@ -28,4 +28,17 @@
     </mat-card-content>
   </mat-card>
   
+  <mat-card *ngIf="leader" fxFlex>
+      <mat-card-header>
+        <div mat-card-avatar></div>
+        <mat-card-title>
+          <h3>{{leader.name | uppercase}}</h3>
+        </mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src={{leader.image}} alt={{leader.name}}>
+      <mat-card-content>
+        <p>{{leader.description}}</p>
+      </mat-card-content>
+    </mat-card>
+
   </div>
