--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,6 +37,7 @@
       </mat-card-header>
       <img mat-card-image src={{leader.image}} alt={{leader.name}}>
       <mat-card-content>
+        <p>{{leader.designation}}</p> 
         <p>{{leader.description}}</p>
       </mat-card-content>
     </mat-card>
