--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,10 @@
       </p>
     </mat-card-content>
   </mat-card>
-  
+  <div fxFlex [hidden]="dish">
+    <mat-spinner></mat-spinner> <h4>Loading ... Please wait</h4>
+  </div>
+
   <mat-card *ngIf="promotion" fxFlex>
     <mat-card-header>
       <div mat-card-avatar></div>
@@ -27,7 +30,10 @@
       </p>
     </mat-card-content>
   </mat-card>
-  
+  <div fxFlex [hidden]="promotion">
+    <mat-spinner></mat-spinner> <h4>Loading ... Please wait</h4>
+  </div>
+
   <mat-card *ngIf="leader" fxFlex>
       <mat-card-header>
         <div mat-card-avatar></div>
@@ -41,5 +47,8 @@
         <p>{{leader.description}}</p>
       </mat-card-content>
     </mat-card>
+    <div fxFlex [hidden]="leader">
+      <mat-spinner></mat-spinner> <h4>Loading ... Please wait</h4>
+    </div>
 
   </div>
