--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -7,7 +7,7 @@
     fxLayoutGap.xs="0">
 
 <div fxFlex="40" *ngIf="dish">
-    <mat-card *ngIf="dish">
+    <mat-card>
       <mat-card-header>
         <mat-card-title>
           <h3>{{ dish.name | uppercase }}</h3>
@@ -18,9 +18,16 @@
         {{ dish.description }}
       </mat-card-content>
       <mat-card-actions>
+          <button mat-button [routerLink]="['/dishdetail', prev]">
+            <span class="fa fa-chevron-left fa-lg"></span>
+          </button>
           <button mat-button (click)="goBack()">BACK</button>
           <button mat-button>LIKE</button>
           <button mat-button>SHARE</button>
+          <span class="flex-spacer"></span>
+          <button mat-button [routerLink]="['/dishdetail', next]">
+            <span class="fa fa-chevron-right fa-lg"></span>
+          </button>
       </mat-card-actions>
     </mat-card>
 </div>
@@ -29,7 +36,7 @@
 </div>
 
 <div fxFlex="40" *ngIf="dish">
-  <mat-list *ngIf="dish">
+  <mat-list>
     <h2 mat-header> Comments </h2>
     <mat-list-item *ngFor="let comments of dish.comments">
       <p matLine> {{ comments.comment }} </p>
