--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -6,47 +6,73 @@
     fxLayoutGap="10px" 
     fxLayoutGap.xs="0">
 
-<div fxFlex="40" *ngIf="dish">
-    <mat-card>
-      <mat-card-header>
-        <mat-card-title>
-          <h3>{{ dish.name | uppercase }}</h3>
-        </mat-card-title>
-      </mat-card-header>
-      <img mat-card-image src={{dish.image}} alt={{dish.name}}>
-      <mat-card-content>
-        {{ dish.description }}
-      </mat-card-content>
-      <mat-card-actions>
-          <button mat-button [routerLink]="['/dishdetail', prev]">
-            <span class="fa fa-chevron-left fa-lg"></span>
-          </button>
-          <button mat-button (click)="goBack()">BACK</button>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-          <span class="flex-spacer"></span>
-          <button mat-button [routerLink]="['/dishdetail', next]">
-            <span class="fa fa-chevron-right fa-lg"></span>
-          </button>
-      </mat-card-actions>
-    </mat-card>
-</div>
-<div fxFlex [hidden]="dish">
-  <mat-spinner></mat-spinner> <h4>Loading ... Please wait</h4>
-</div>
+  <div fxFlex="40" *ngIf="dish">
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>
+            <h3>{{ dish.name | uppercase }}</h3>
+          </mat-card-title>
+        </mat-card-header>
+        <img mat-card-image src={{dish.image}} alt={{dish.name}}>
+        <mat-card-content>
+          {{ dish.description }}
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-button [routerLink]="['/dishdetail', prev]">
+              <span class="fa fa-chevron-left fa-lg"></span>
+            </button>
+            <button mat-button (click)="goBack()">BACK</button>
+            <button mat-button>LIKE</button>
+            <button mat-button>SHARE</button>
+            <span class="flex-spacer"></span>
+            <button mat-button [routerLink]="['/dishdetail', next]">
+              <span class="fa fa-chevron-right fa-lg"></span>
+            </button>
+        </mat-card-actions>
+      </mat-card>
+  </div>
+  <div fxFlex [hidden]="dish">
+    <mat-spinner></mat-spinner> <h4>Loading ... Please wait</h4>
+  </div>
 
-<div fxFlex="40" *ngIf="dish">
-  <mat-list>
-    <h2 mat-header> Comments </h2>
-    <mat-list-item *ngFor="let comments of dish.comments">
-      <p matLine> {{ comments.comment }} </p>
-      <p matLine> {{ comments.rating }} Stars </p>
-      <p matLine> -- {{ comments.author }} {{ comments.date | date }} </p>
-    </mat-list-item>
-  </mat-list>
-</div>
-<div fxFlex [hidden]="dish">
-  <mat-spinner></mat-spinner> <h4>Loading ... Please wait</h4>
-</div>
+  <div fxFlex="40" *ngIf="dish">
+    <mat-list>
+      <h2 mat-header> Comments </h2>
+      <mat-list-item *ngFor="let comments of dish.comments">
+        <p matLine> {{ comments.comment }} </p>
+        <p matLine> {{ comments.rating }} Stars </p>
+        <p matLine> -- {{ comments.author }} {{ comments.date | date }} </p>
+      </mat-list-item>
+    </mat-list>
+  </div>
+  <div fxFlex [hidden]="dish">
+    <mat-spinner></mat-spinner> <h4>Loading ... Please wait</h4>
+  </div>
+
+  <div fxFlex="40">
+      <h3>Add Your Review</h3>
+      <p>{{ commentForm.value | json }} {{ commentForm.status | json }}</p>
+      <form novalidate [formGroup]="commentForm" #cform="ngForm" (ngSubmit)="onSubmit()">
+        <p>
+          <mat-form-field class="half-width">
+            <input matInput formControlName="yourname" placeholder="Your Name" type="text" required>
+            <mat-error *ngIf="formErrors.yourname">
+              {{ formErrors.yourname }}
+            </mat-error>
+          </mat-form-field>
+        </p>
+        <p>
+          <mat-slider matInput formControlName="rating" min="1" max="5" step="1" value="5" thumbLabel tickInterval="1"></mat-slider>
+        </p>
+        <p>
+          <mat-form-field class="full-width">
+            <textarea matInput formControlName="comment" placeholder="Your Comment" rows=3>
+            </textarea>
+          </mat-form-field>
+        </p>
+        <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="commentForm.invalid">Submit</button>
+        </form>
+    </div>
+
 
 </div>
