Comment_Form_Task2

--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -52,6 +52,7 @@
   <div fxFlex="40">
       <h3>Add Your Review</h3>
       <p>{{ commentForm.value | json }} {{ commentForm.status | json }}</p>
+
       <form novalidate [formGroup]="commentForm" #cform="ngForm" (ngSubmit)="onSubmit()">
         <p>
           <mat-form-field class="half-width">
@@ -62,7 +63,7 @@
           </mat-form-field>
         </p>
         <p>
-          <mat-slider matInput formControlName="rating" min="1" max="5" step="1" value="5" thumbLabel tickInterval="1"></mat-slider>
+          <mat-slider matInput formControlName="rating" min="1" max="5" step="1" thumbLabel tickInterval="1"></mat-slider>
         </p>
         <p>
           <mat-form-field class="full-width">
@@ -73,6 +74,5 @@
         <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="commentForm.invalid">Submit</button>
         </form>
     </div>
-
 
 </div>
