--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -31,7 +31,7 @@
         </mat-card-actions>
       </mat-card>
   </div>
-  <div [hidden]="dish">
+  <div fxFlex [hidden]="dish || errMess">
     <mat-spinner></mat-spinner> <h4>Loading ... Please wait</h4>
   </div>
 
@@ -71,8 +71,13 @@
         </form>
       </mat-list>
     </div>
-    <div [hidden]="dish">
+
+    <div fxFlex [hidden]="dish || errMess">
       <mat-spinner></mat-spinner> <h4>Loading ... Please wait</h4>
     </div>
-
+    <div fxFlex *ngIf="errMess">
+      <h2>Error</h2>
+      <h4>{{errMess}}</h4>
+    </div>
+    
 </div>
