--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,10 @@
-<div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column"  fxLayoutGap="10px">
+<div class="container" 
+    fxLayout="row" 
+    fxLayout.sm="column" 
+    fxLayout.xs="column"
+    fxLayoutGap="10px">
 
-  <mat-card *ngIf="dish" fxFlex>
+  <mat-card *ngIf="dish" fxFlex [@expand]>
     <mat-card-header>
       <div mat-card-avatar></div>
       <mat-card-title>
@@ -21,7 +25,7 @@
     <h4>{{dishErrMess}}</h4>
   </div>
 
-  <mat-card *ngIf="promotion" fxFlex>
+  <mat-card *ngIf="promotion" fxFlex [@expand]>
     <mat-card-header>
       <div mat-card-avatar></div>
       <mat-card-title>
@@ -38,7 +42,7 @@
     <mat-spinner></mat-spinner> <h4>Loading ... Please wait</h4>
   </div>
 
-  <mat-card *ngIf="leader" fxFlex>
+  <mat-card *ngIf="leader" fxFlex [@expand]>
       <mat-card-header>
         <div mat-card-avatar></div>
         <mat-card-title>
