--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,14 +32,18 @@
         <h3>{{promotion.name | uppercase}}</h3>
       </mat-card-title>
     </mat-card-header>
-    <img mat-card-image src={{promotion.image}} alt={{promotion.name}}>
+    <img mat-card-image src="{{BaseURL + promotion.image}}" alt={{promotion.name}}>
     <mat-card-content>
       <p>{{promotion.description}}
       </p>
     </mat-card-content>
   </mat-card>
-  <div fxFlex [hidden]="promotion">
+  <div fxFlex [hidden]="promotion || errMess">
     <mat-spinner></mat-spinner> <h4>Loading ... Please wait</h4>
+  </div>
+  <div fxFlex *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{errMess}}</h4>
   </div>
 
   <mat-card *ngIf="leader" fxFlex [@expand]>
@@ -49,14 +53,18 @@
           <h3>{{leader.name | uppercase}}</h3>
         </mat-card-title>
       </mat-card-header>
-      <img mat-card-image src={{leader.image}} alt={{leader.name}}>
+      <img mat-card-image src="{{BaseURL + leader.image}}" alt={{leader.name}}>
       <mat-card-content>
         <p>{{leader.designation}}</p> 
         <p>{{leader.description}}</p>
       </mat-card-content>
     </mat-card>
-    <div fxFlex [hidden]="leader">
+    <div fxFlex [hidden]="leader || errMess">
       <mat-spinner></mat-spinner> <h4>Loading ... Please wait</h4>
+    </div>
+    <div fxFlex *ngIf="errMess">
+      <h2>Error</h2>
+      <h4>{{errMess}}</h4>
     </div>
 
   </div>
